--- a/FootballManagerHTML/index.html
+++ b/FootballManagerHTML/index.html
@@ -467,7 +467,7 @@
 
 						Bonjour NOM_ENTRAINEUR !<br>Je viens vous voir pour savoir si ces joueurs pourront être libérés pour la prochaine compétition internationale (<span class="hover:underline cursor-pointer">Euro 2024</span>) :
 
-						<div class="my-2 px-3 py-2 bg-gray-300/10">
+						<div class="my-2 px-3 py-2 bg-gray-300/10 rounded-md">
 
 							<p>- <span class="hover:underline cursor-pointer">Kylian Mbappé</span> <br> - <span class="hover:underline cursor-pointer">Antoine Griezman</span> <br> - <span class="hover:underline cursor-pointer">Olivier Giroud</span></p>
 
@@ -1069,7 +1069,7 @@
 
 							<div class="mt-1 w-full rounded-full p-[3px] bg-gray-300/25">
 
-								<div class="w-[88%] w-full rounded-full px-3 py-[2px] bg-green-500 text-white text-[12px] flex items-center justify-center"></div>
+								<div class="w-[88%] w-full rounded-full px-3 py-[2px] bg-green-500 text-white text-[12px]"></div>
 
 							</div>
 
@@ -1079,13 +1079,13 @@
 
 				</div>
 
-				<div class="w-full px-6 pt-6 pb-0 pb-1">
+				<div class="w-full px-6 pt-6 pb-0 pb-1 overflow-y-auto">
 
 					<div class="text-white text-[12px] mb-4 pb-6 grid grid-cols-3 gap-3 border-b border-gray-300/25">
 
 						<div class="w-full flex items-center justify-center">
 
-							<div class="w-[8vh] h-[8vh] flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full tooltip">
+							<div class="w-[8vh] h-[8vh] flex items-center justify-center bg-white/5 hover:bg-white/10 transition-all border-2 border-gray-300/25 rounded-full tooltip">
 
 								<span class="tooltiptext">Élément moteur</span>
 
@@ -1099,7 +1099,7 @@
 
 						<div class="w-full flex items-center justify-center">
 
-							<div class="w-[8vh] h-[8vh] flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full tooltip">
+							<div class="w-[8vh] h-[8vh] flex items-center justify-center bg-white/5 hover:bg-white/10 transition-all border-2 border-gray-300/25 rounded-full tooltip">
 
 								<span class="tooltiptext">Communicatif</span>
 
@@ -1113,7 +1113,7 @@
 
 						<div class="w-full flex items-center justify-center">
 
-							<div class="w-[8vh] h-[8vh]  flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full tooltip">
+							<div class="w-[8vh] h-[8vh]  flex items-center justify-center bg-white/5 hover:bg-white/10 transition-all border-2 border-gray-300/25 rounded-full tooltip">
 
 								<span class="tooltiptext">Travailleur</span>
 
@@ -1127,7 +1127,7 @@
 
 						<div class="w-full flex items-center justify-center">
 
-							<div class="w-[8vh] h-[8vh] flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full tooltip">
+							<div class="w-[8vh] h-[8vh] flex items-center justify-center bg-white/5 hover:bg-white/10 transition-all border-2 border-gray-300/25 rounded-full tooltip">
 
 								<span class="tooltiptext">Star Mondiale</span>
 
@@ -1142,7 +1142,7 @@
 
 						<div class="w-full flex items-center justify-center">
 
-							<div class="w-[8vh] h-[8vh] flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full tooltip">
+							<div class="w-[8vh] h-[8vh] flex items-center justify-center bg-white/5 hover:bg-white/10 transition-all border-2 border-gray-300/25 rounded-full tooltip">
 
 								<span class="tooltiptext">Favori des Fans</span>
 
@@ -1156,7 +1156,7 @@
 
 						<div class="w-full flex items-center justify-center">
 
-							<div class="w-[8vh] h-[8vh]  flex items-center justify-center bg-[#1E2129] border border-gray-300/25 rounded-full tooltip">
+							<div class="w-[8vh] h-[8vh]  flex items-center justify-center bg-white/5 hover:bg-white/10 transition-all border-2 border-gray-300/25 rounded-full tooltip">
 
 								<span class="tooltiptext">Soif de victoire</span>
 
