--- a/FootballManagerHTML/components.html
+++ b/FootballManagerHTML/components.html
@@ -1037,7 +1037,7 @@
 
 							<img alt="Logo PSG" src="https://upload.wikimedia.org/wikipedia/fr/8/86/Paris_Saint-Germain_Logo.svg" class="h-10 translate-x-[-5px] translate-y-[-40px] translate-x-[-25px]">
 
-							<div class="w-8 h-8 rounded-full bg-green-500 text-white text-[16px] flex items-center justify-center translate-y-[40px] translate-x-[45px]">94</div>
+							<div class="w-8 h-8 rounded-full bg-green-500 text-white text-[16px] flex items-center justify-center translate-y-[40px] translate-x-[45px] border-2 border-[#1E2129]">94</div>
 
 						</div>
 
@@ -1240,7 +1240,7 @@
 								<path stroke-linecap="round" stroke-linejoin="round" d="M16.5 18.75h-9m9 0a3 3 0 013 3h-15a3 3 0 013-3m9 0v-3.375c0-.621-.503-1.125-1.125-1.125h-.871M7.5 18.75v-3.375c0-.621.504-1.125 1.125-1.125h.872m5.007 0H9.497m5.007 0a7.454 7.454 0 01-.982-3.172M9.497 14.25a7.454 7.454 0 00.981-3.172M5.25 4.236c-.982.143-1.954.317-2.916.52A6.003 6.003 0 007.73 9.728M5.25 4.236V4.5c0 2.108.966 3.99 2.48 5.228M5.25 4.236V2.721C7.456 2.41 9.71 2.25 12 2.25c2.291 0 4.545.16 6.75.47v1.516M7.73 9.728a6.726 6.726 0 002.748 1.35m8.272-6.842V4.5c0 2.108-.966 3.99-2.48 5.228m2.48-5.492a46.32 46.32 0 012.916.52 6.003 6.003 0 01-5.395 4.972m0 0a6.726 6.726 0 01-2.749 1.35m0 0a6.772 6.772 0 01-3.044 0" />
 							</svg>
 
-							<p class="ml-2 text-amber-500 text-[14px]">Vainqueur du Ballon d'Or 2023</p>
+							<p class="ml-2 text-amber-500 text-[14px]">Vainqueur du <span class="hover:underline cursor-pointer">Ballon d'Or 2023</span></p>
 
 						</div>
 
@@ -1250,7 +1250,7 @@
 								<path stroke-linecap="round" stroke-linejoin="round" d="M16.5 18.75h-9m9 0a3 3 0 013 3h-15a3 3 0 013-3m9 0v-3.375c0-.621-.503-1.125-1.125-1.125h-.871M7.5 18.75v-3.375c0-.621.504-1.125 1.125-1.125h.872m5.007 0H9.497m5.007 0a7.454 7.454 0 01-.982-3.172M9.497 14.25a7.454 7.454 0 00.981-3.172M5.25 4.236c-.982.143-1.954.317-2.916.52A6.003 6.003 0 007.73 9.728M5.25 4.236V4.5c0 2.108.966 3.99 2.48 5.228M5.25 4.236V2.721C7.456 2.41 9.71 2.25 12 2.25c2.291 0 4.545.16 6.75.47v1.516M7.73 9.728a6.726 6.726 0 002.748 1.35m8.272-6.842V4.5c0 2.108-.966 3.99-2.48 5.228m2.48-5.492a46.32 46.32 0 012.916.52 6.003 6.003 0 01-5.395 4.972m0 0a6.726 6.726 0 01-2.749 1.35m0 0a6.772 6.772 0 01-3.044 0" />
 							</svg>
 
-							<p class="ml-2 text-amber-500 text-[14px]">Vainqueur de la Coupe du Monde 2018</p>
+							<p class="ml-2 text-amber-500 text-[14px]">Vainqueur de la <span class="hover:underline cursor-pointer">Coupe du Monde 2018</span></p>
 
 						</div>
 
@@ -1262,13 +1262,19 @@
 
 						<div class="mt-2 flex items-center">
 
-							<p class="text-white text-[14px]">Nombres de buts cette saison : 24 buts</p>
+							<p class="text-gray-300 text-[14px]">Salaire : 300 000 € / Semaine</p>
 
 						</div>
 
 						<div class="flex items-center">
 
-							<p class="text-white text-[14px]">Nombres de buts total : 781 buts</p>
+							<p class="text-gray-300 text-[14px]">Nombres de buts total : 245 buts</p>
+
+						</div>
+
+						<div class="flex items-center">
+
+							<p class="text-gray-300 text-[14px]">Nombres de clubs pro : 2 clubs</p>
 
 						</div>
 
@@ -1416,7 +1422,7 @@
 
 							<img alt="Logo PSG" src="https://upload.wikimedia.org/wikipedia/fr/8/86/Paris_Saint-Germain_Logo.svg" class="h-10 translate-x-[-5px] translate-y-[-40px] translate-x-[-25px]">
 
-							<div class="w-8 h-8 rounded-full bg-green-500 text-white text-[16px] flex items-center justify-center translate-y-[40px] translate-x-[45px]">93</div>
+							<div class="w-8 h-8 rounded-full bg-green-500 text-white text-[16px] flex items-center justify-center translate-y-[40px] translate-x-[45px] border-2 border-[#1E2129]">93</div>
 
 						</div>
 
@@ -1619,7 +1625,7 @@
 								<path stroke-linecap="round" stroke-linejoin="round" d="M16.5 18.75h-9m9 0a3 3 0 013 3h-15a3 3 0 013-3m9 0v-3.375c0-.621-.503-1.125-1.125-1.125h-.871M7.5 18.75v-3.375c0-.621.504-1.125 1.125-1.125h.872m5.007 0H9.497m5.007 0a7.454 7.454 0 01-.982-3.172M9.497 14.25a7.454 7.454 0 00.981-3.172M5.25 4.236c-.982.143-1.954.317-2.916.52A6.003 6.003 0 007.73 9.728M5.25 4.236V4.5c0 2.108.966 3.99 2.48 5.228M5.25 4.236V2.721C7.456 2.41 9.71 2.25 12 2.25c2.291 0 4.545.16 6.75.47v1.516M7.73 9.728a6.726 6.726 0 002.748 1.35m8.272-6.842V4.5c0 2.108-.966 3.99-2.48 5.228m2.48-5.492a46.32 46.32 0 012.916.52 6.003 6.003 0 01-5.395 4.972m0 0a6.726 6.726 0 01-2.749 1.35m0 0a6.772 6.772 0 01-3.044 0" />
 							</svg>
 
-							<p class="ml-2 text-amber-500 text-[14px]">Vainqueur du Ballon d'Or 2021 et 6 autres</p>
+							<p class="ml-2 text-amber-500 text-[14px]">Vainqueur du <span class="hover:underline cursor-pointer">Ballon d'Or 2021</span> et <span class="hover:underline cursor-pointer">6 autres</span></p>
 
 						</div>
 
@@ -1629,7 +1635,7 @@
 								<path stroke-linecap="round" stroke-linejoin="round" d="M16.5 18.75h-9m9 0a3 3 0 013 3h-15a3 3 0 013-3m9 0v-3.375c0-.621-.503-1.125-1.125-1.125h-.871M7.5 18.75v-3.375c0-.621.504-1.125 1.125-1.125h.872m5.007 0H9.497m5.007 0a7.454 7.454 0 01-.982-3.172M9.497 14.25a7.454 7.454 0 00.981-3.172M5.25 4.236c-.982.143-1.954.317-2.916.52A6.003 6.003 0 007.73 9.728M5.25 4.236V4.5c0 2.108.966 3.99 2.48 5.228M5.25 4.236V2.721C7.456 2.41 9.71 2.25 12 2.25c2.291 0 4.545.16 6.75.47v1.516M7.73 9.728a6.726 6.726 0 002.748 1.35m8.272-6.842V4.5c0 2.108-.966 3.99-2.48 5.228m2.48-5.492a46.32 46.32 0 012.916.52 6.003 6.003 0 01-5.395 4.972m0 0a6.726 6.726 0 01-2.749 1.35m0 0a6.772 6.772 0 01-3.044 0" />
 							</svg>
 
-							<p class="ml-2 text-amber-500 text-[14px]">Vainqueur de la Coupe du Monde 2022</p>
+							<p class="ml-2 text-amber-500 text-[14px]">Vainqueur de la <span class="hover:underline cursor-pointer">Coupe du Monde 2022</span></p>
 
 						</div>
 
@@ -1641,13 +1647,19 @@
 
 						<div class="mt-2 flex items-center">
 
-							<p class="text-white text-[14px]">Nombres de buts cette saison : 24 buts</p>
+							<p class="text-gray-300 text-[14px]">Salaire : 225 000 € / Semaine</p>
 
 						</div>
 
 						<div class="flex items-center">
 
-							<p class="text-white text-[14px]">Nombres de buts total : 781 buts</p>
+							<p class="text-gray-300 text-[14px]">Nombres de buts total : 791 buts</p>
+
+						</div>
+
+						<div class="flex items-center">
+
+							<p class="text-gray-300 text-[14px]">Nombres de clubs pro : 2 clubs</p>
 
 						</div>
 
