--- a/FootballManagerHTML/components.html
+++ b/FootballManagerHTML/components.html
@@ -249,6 +249,73 @@
 
 			</div>
 
+			<!-- NOTIFICATION - TRANSFERT EN ATTENTE - GRAND -->
+			<div class="bg-[#1E2129] w-[40vh] border-t-[6px] border-t-violet-500 border border-gray-300/25">
+
+				<div class="p-6 pb-0 w-full flex items-center justify-between">
+
+					<span class="px-2 py-1 bg-violet-500 text-white text-[12px] font-bold rounded-sm">TRANSFERT EN ATTENTE</span>
+
+					<p class="text-gray-300 text-[14px]">16/02/2023 à 14h52</p>
+
+				</div>
+
+				<div class="py-8 w-full flex items-center gap-x-4 justify-center">
+
+					<div class="w-16 h-16 bg-[url('https://www.francebleu.fr/s3/cruiser-production/2023/02/e8eb703b-44bf-4919-9ae1-6842fd69fe46/1200x680_reencodedfatimage_xnaphotostwo598757.jpg')] bg-cover bg-center rounded-full cursor-pointer flex items-start">
+
+						<img alt="Logo AC Milan" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/Logo_of_AC_Milan.svg/1200px-Logo_of_AC_Milan.svg.png" class="h-8 translate-x-[45px] translate-y-[-8px] cursor-pointer">
+
+					</div>
+
+					<div class="flex items-center gap-x-1 justify-center">
+
+						<div class="w-3 h-3 bg-violet-500/50 rounded-full"></div>
+
+						<div class="w-6 h-6 bg-violet-500/75 rounded-full"></div>
+
+						<div class="w-10 h-10 bg-violet-500 rounded-full flex items-center justify-center">
+
+							<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-white">
+								<path stroke-linecap="round" stroke-linejoin="round" d="M15.75 5.25v13.5m-7.5-13.5v13.5" />
+							</svg>
+
+						</div>
+
+						<div class="w-6 h-6 bg-violet-500/75 rounded-full"></div>
+
+						<div class="w-3 h-3 bg-violet-500/50 rounded-full"></div>
+
+					</div>
+
+					<img alt="Logo Real Madrid" src="https://upload.wikimedia.org/wikipedia/fr/thumb/c/c7/Logo_Real_Madrid.svg/1468px-Logo_Real_Madrid.svg.png" class="h-16 cursor-pointer">
+
+				</div>
+
+				<div class="pb-6 w-full flex items-center justify-center">
+
+					<div class="block text-center">
+
+						<p class="mb-1 text-white text-[20px]">Olivier Giroud</p>
+
+						<span class="px-2 py-1 rounded-md bg-gray-300/25 text-white text-[16px]">25 000 000 €</span>
+
+						<p class="mt-1 text-gray-300 text-[14px]">Proposés par <span class="hover:underline transition-all cursor-pointer">Real Madrid</span></p>
+
+					</div>
+
+				</div>
+
+				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-violet-500/10 transition-all cursor-pointer">Accepter le transfert</div>
+
+				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-green-500/10 transition-all cursor-pointer">Proposé un nouveau montant</div>
+
+				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-red-600/10 transition-all cursor-pointer">Refusé le transfert</div>
+
+				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Fermer la notification</div>
+
+			</div>
+
 			<div class="grid grid-cols-1 gap-y-4">
 
 				<!-- NOTIFICATION - TRANSFERT CONFIRMÉ - PETIT -->
@@ -350,6 +417,39 @@
 
 				</div>
 
+				<!-- NOTIFICATION - TRANSFERT EN ATTENTE - PETIT -->
+				<div class="bg-[#1E2129] w-[40vh] border-t-[6px] border-t-violet-500 border border-gray-300/25 hover:cursor-pointer hover:bg-white/10 transition-all">
+
+					<div class="p-4 w-full flex items-start justify-between">
+
+						<span class="px-2 py-1 bg-violet-500 text-white text-[12px] font-bold rounded-sm">TRANSFERT EN ATTENTE</span>
+
+						<div class="flex items-center gap-x-2">
+
+							<div class="w-10 h-10 bg-[url('https://www.francebleu.fr/s3/cruiser-production/2023/02/e8eb703b-44bf-4919-9ae1-6842fd69fe46/1200x680_reencodedfatimage_xnaphotostwo598757.jpg')] bg-cover bg-center rounded-full"></div>
+
+							<div class="w-6 h-6 bg-violet-500 rounded-full flex items-center justify-center">
+
+								<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 text-white">
+									<path stroke-linecap="round" stroke-linejoin="round" d="M15.75 5.25v13.5m-7.5-13.5v13.5" />
+								</svg>
+
+							</div>
+
+							<img alt="Logo Real Madrid" src="https://upload.wikimedia.org/wikipedia/fr/thumb/c/c7/Logo_Real_Madrid.svg/1468px-Logo_Real_Madrid.svg.png" class="h-10">
+
+						</div>
+
+					</div>
+
+					<div class="px-4 py-2 w-full flex items-center justify-right">
+
+						<p class="text-gray-300 text-[12px] text-right">16/02/2023 à 14h52</p>
+
+					</div>
+
+				</div>
+
 			</div>
 
 			<div class="grid grid-cols-1 gap-y-4">
@@ -400,6 +500,25 @@
 						<span class="px-2 py-1 bg-amber-500 text-white text-[12px] font-bold rounded-sm">PRÊT CONFIRMÉ</span>
 
 						<span class="px-2 py-1 bg-gray-300/25 text-white text-[12px] rounded-sm">Mattéo Guendouzi</span>
+
+					</div>
+
+					<div class="px-4 py-2 w-full flex items-center justify-right">
+
+						<p class="text-gray-300 text-[12px] text-right">16/02/2023 à 14h52</p>
+
+					</div>
+
+				</div>
+
+				<!-- NOTIFICATION - TRANSFERT EN ATTENTE - PETIT -->
+				<div class="bg-[#1E2129] w-[40vh] border-t-[6px] border-t-violet-500 border border-gray-300/25 hover:cursor-pointer hover:bg-white/10 transition-all">
+
+					<div class="p-4 w-full flex items-start justify-between">
+
+						<span class="px-2 py-1 bg-violet-500 text-white text-[12px] font-bold rounded-sm">TRANSFERT EN ATTENTE</span>
+
+						<span class="px-2 py-1 bg-gray-300/25 text-white text-[12px] rounded-sm">Olivier Giroud</span>
 
 					</div>
 
